--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,14 @@ header {
 .title{
     padding: 40px 40px 25px 40px;
 }
+
+main {
+    height: calc(100% - 140px);
+    overflow: scroll;
+    padding: 40px; 
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
