--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,18 @@ main {
     padding: 40px; 
 }
 
+main img {
+    height: 40px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
+}
+
+.container .ingredient {
+    width: 50%;
+    padding: 5px 0;
+    display: flex;
+    align-items: center;
 }
