--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,20 @@ header {
 main {
     height: calc(100% - 140px);
     overflow: scroll;
-    padding: 40px; 
+    padding: 50px 40px 40px 40px; 
+}
+
+.burger {
+    padding-bottom: 30px;
+}
+
+h3 {
+    padding-bottom: 10px;
 }
 
 main img {
     height: 40px;
+    margin-right: 15px;
 }
 
 .container {
@@ -47,10 +56,19 @@ main img {
 }
 
 .calculate {
-    margin: 20px;
     text-align: center;
+}
+
+.coupon {
+    padding: 30px 0px 30px 0px;
 }
 
 button {
     padding: 10px 20px 10px 20px;
+}
+
+footer{
+    background-color: #d23359;
+    color: white;
+    padding: 20px 40px 40px 40px; 
 }
