--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ main {
     padding-bottom: 30px;
 }
 
+#name_burger {
+    font-size: 20px;
+    border: 0px;
+}
+
 h3 {
     padding-bottom: 10px;
 }
@@ -59,12 +64,29 @@ main img {
     text-align: center;
 }
 
+#discount_coupon {
+    background-color: #fff4e3;
+    border: 0px;
+    width: 350px;
+    padding: 3px;
+    margin-left: 15px;
+    border-radius: 2px;
+    font-size: 12px;
+}
+
 .coupon {
     padding: 30px 0px 30px 0px;
 }
 
 button {
     padding: 10px 20px 10px 20px;
+}
+
+button:hover {
+    background-color: #fd7f40;
+    border: 1px solid blue;
+    border-radius: 2px;
+    padding: 11px 21px;
 }
 
 footer{
